syntax = "proto3";

package users;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse) {};
}

message UserRequest {
  string userId = 1;
}

message UserResponse {
  string username = 1;
  string email = 2;
  string id = 3;
}